Update parent pom and pre-release cleanup (#234)