@@ -17,9 +17,7 @@
  */
 package org.sonar.plugins.html.checks.sonar;
 
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -111,7 +109,7 @@ public class DeprecatedAttributesInHtml5Check extends AbstractPageCheck {
   }
 
   private static void put(String key, String... values) {
-    DEPRECATED.put(key, new HashSet<>(Arrays.asList(values)));
+    DEPRECATED.put(key, Set.of(values));
   }
 
   @Override
